force-app/main/default/objects/Payout__c/Payout__c.object-meta.xml
<CustomObject>
    <label>Payout</label>
    <nameField>
        <displayFormat>PR-{0000000}</displayFormat>
        <label>Pay Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payouts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>