force-app/main/default/objects/Payout__c/fields/CDAC__c.field-meta.xml
<CustomField>
    <fullName>CDAC__c</fullName>
    <formula>IF(CDAC_Contribution__c, 
	IF(Total_Amount_CPF__c &gt; 7500 ,3,
		IF(Total_Amount_CPF__c &gt; 5000 ,2,
			IF(Total_Amount_CPF__c &gt; 3500 ,1.5,
				IF(Total_Amount_CPF__c &gt; 2000 ,1,
					IF(Total_Amount_CPF__c &gt; 0 ,0.5, 0)
				)
			)
		)
	), 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CDAC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>