force-app/main/default/objects/Payout__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <formula>IF(AND(Monthly_Salary__c &gt;0,Monthly_Working_Days__c&gt;0),Monthly_Salary__c  / Monthly_Working_Days__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>