force-app/main/default/objects/Payout__c/fields/Director_Fee_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Director_Fee_Roll_Up__c</fullName>
    <label>Director Fee (Roll Up)</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.Payitem_Name__c</field>
        <operation>equals</operation>
        <value>Director Fee</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>