force-app/main/default/objects/Payout__c/fields/Employee_CPF_Amount__c.field-meta.xml
<CustomField>
    <fullName>Employee_CPF_Amount__c</fullName>
    <label>Employee CPF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>