force-app/main/default/objects/Payout__c/fields/Employee_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payrolls</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>