force-app/main/default/objects/Payout__c/fields/EUCF__c.field-meta.xml
<CustomField>
    <fullName>EUCF__c</fullName>
    <formula>IF(EUCF_Contribution__c, 
	IF(Total_Amount_CPF__c &gt; 10000 ,20,
		IF(Total_Amount_CPF__c &gt; 7000 ,16,
			IF(Total_Amount_CPF__c &gt;4000 ,12,
				IF(Total_Amount_CPF__c &gt; 2500 ,9,
					IF(Total_Amount_CPF__c &gt; 1500 ,6, 
						IF(Total_Amount_CPF__c &gt; 1000 ,4, 
							IF(Total_Amount_CPF__c &gt; 0 ,2,0)
						)
					)
				)
			)
		)
	), 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EUCF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>