force-app/main/default/objects/Payout__c/fields/EUCF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>EUCF_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EUCF Contribution</label>
    <type>Checkbox</type>
</CustomField>