force-app/main/default/objects/Payout__c/fields/Group_Commission_OW__c.field-meta.xml
<CustomField>
    <fullName>Group_Commission_OW__c</fullName>
    <label>Group Commission OW</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.Payitem_Name__c</field>
        <operation>equals</operation>
        <value>Group Commission (OW)</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>