force-app/main/default/objects/Payout__c/fields/Leave_Encashment__c.field-meta.xml
<CustomField>
    <fullName>Leave_Encashment__c</fullName>
    <label>Leave Encashment</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.Payitem_Name__c</field>
        <operation>equals</operation>
        <value>Leave Encashment</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>