force-app/main/default/objects/Payout__c/fields/MBMF__c.field-meta.xml
<CustomField>
    <fullName>MBMF__c</fullName>
    <formula>IF(MBMF_Contribution__c , 
	IF(Total_Amount_CPF__c &gt; 10000 ,26,
		IF(Total_Amount_CPF__c &gt; 8000 ,24,
			IF(Total_Amount_CPF__c &gt; 6000 ,22,
				IF(Total_Amount_CPF__c &gt; 4000 ,19.5,
					IF(Total_Amount_CPF__c &gt; 3000 ,15, 
						IF(Total_Amount_CPF__c &gt; 2000 ,6.5, 
							IF(Total_Amount_CPF__c &gt; 1000 ,4.5, 
								IF(Total_Amount_CPF__c &gt; 0 ,3, 0)
							)
						)
					)
				)
			)
		)
	), 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MBMF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>