force-app/main/default/objects/Payout__c/fields/MBMF_Contribution__c.field-meta.xml
<CustomField>
    <fullName>MBMF_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MBMF Contribution</label>
    <type>Checkbox</type>
</CustomField>