force-app/main/default/objects/Payout__c/fields/Monthly_Working_Days__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Working_Days__c</fullName>
    <label>Monthly Working Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>