force-app/main/default/objects/Payout__c/fields/No_of_working_days__c.field-meta.xml
<CustomField>
    <fullName>No_of_working_days__c</fullName>
    <label>No. of working days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>