force-app/main/default/objects/Payout__c/fields/No_Pay_Leave__c.field-meta.xml
<CustomField>
    <fullName>No_Pay_Leave__c</fullName>
    <label>No Pay Leave</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.Payitem_Name__c</field>
        <operation>equals</operation>
        <value>Unpaid Leave,Unpaid Sick Leave</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>