force-app/main/default/objects/Payout__c/fields/NS_Make_up_Pay__c.field-meta.xml
<CustomField>
    <fullName>NS_Make_up_Pay__c</fullName>
    <label>NS Make-up Pay</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.Payitem_Name__c</field>
        <operation>equals</operation>
        <value>NS Make-up Pay</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>