force-app/main/default/objects/Payout__c/fields/Overtime_Variable__c.field-meta.xml
<CustomField>
    <fullName>Overtime_Variable__c</fullName>
    <label>Overtime Variable</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.Payitem_Name__c</field>
        <operation>equals</operation>
        <value>Overtime</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>