force-app/main/default/objects/Payout__c/fields/Payment_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payment_Mode__c</fullName>
    <label>Payment Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cash/Cheque</fullName>
            </value>
            <value>
                <fullName>Bank Disk</fullName>
                <default>true</default>
                <label>Bank Disk</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>