force-app/main/default/objects/Payout__c/fields/Payout_Date__c.field-meta.xml
<CustomField>
    <fullName>Payout_Date__c</fullName>
    <formula>DATE(VALUE(TEXT(Year__c)),CASE(Month__c,&apos;January&apos;, 1,&apos;February&apos;,2,&apos;March&apos;,3,&apos;April&apos;,4,&apos;May&apos;,5,&apos;June&apos;,6,&apos;July&apos;,7,&apos;August&apos;,8,&apos;September&apos;,9,&apos;October&apos;,10,&apos;November&apos;,11,12),1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout Date</label>
    <type>Date</type>
</CustomField>