force-app/main/default/objects/Payout__c/fields/Payroll_Batch__c.field-meta.xml
<CustomField>
    <fullName>Payroll_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payroll Batch</label>
    <referenceTo>Payroll_Batch__c</referenceTo>
    <relationshipLabel>Payouts</relationshipLabel>
    <relationshipName>Payouts</relationshipName>
    <type>Lookup</type>
</CustomField>