force-app/main/default/objects/Payout__c/fields/SDL__c.field-meta.xml
<CustomField>
    <fullName>SDL__c</fullName>
    <formula>IF(AND(NOT(ISPICKVAL(Employee_Name__r.Engagement_Type__c,&apos;Internship&apos;)),NOT(ISPICKVAL(Employee_Name__r.Engagement_Type__c,&apos;Non-Employee Director&apos;)),Total_Amount_CPF__c&gt;0),
IF( Total_Amount_CPF__c &gt; 4500, (4500*0.0025) , 
	IF(Total_Amount_CPF__c &gt; 800, (Total_Amount_CPF__c *0.0025) , 2)
),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>