force-app/main/default/objects/Payout__c/fields/SINDA__c.field-meta.xml
<CustomField>
    <fullName>SINDA__c</fullName>
    <formula>IF(SINDA_Contribution__c, 
	IF(Total_Amount_CPF__c &gt; 15000 ,30,
		IF(Total_Amount_CPF__c &gt; 10000 ,18,
			IF(Total_Amount_CPF__c &gt; 7500 ,12,
				IF(Total_Amount_CPF__c &gt; 4500 ,9,
					IF(Total_Amount_CPF__c &gt; 2500 ,7, 
						IF(Total_Amount_CPF__c &gt; 1500 ,5, 
							IF(Total_Amount_CPF__c &gt; 1000 ,3, 
								IF(Total_Amount_CPF__c &gt; 0 ,1, 0)
							)
						)
					)
				)
			)
		)
	), 0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SINDA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>