force-app/main/default/objects/Payout__c/fields/SINDA_Contribution__c.field-meta.xml
<CustomField>
    <fullName>SINDA_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SINDA Contribution</label>
    <type>Checkbox</type>
</CustomField>