force-app/main/default/objects/Payout__c/fields/Total_Amount_CPF__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_CPF__c</fullName>
    <formula>Salary__c + Total_AW_Amount__c + Total_OW_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount (CPF)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>