force-app/main/default/objects/Payout__c/fields/Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost__c</fullName>
    <description>This field is used to send data in einstein analytics</description>
    <formula>Total_Payable__c +  Employer_CPF_Amount__c +  SDL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>