force-app/main/default/objects/Payout__c/fields/Total_Cost_to_the_Company__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_to_the_Company__c</fullName>
    <formula>Salary__c  +  Employer_CPF_Amount__c  +  Total_OW_Amount__c  +  Total_AW_Amount__c + Total_Non_CPF_Amount__c +  SDL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost to the Company</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>