force-app/main/default/objects/Payout__c/fields/Total_CPF__c.field-meta.xml
<CustomField>
    <fullName>Total_CPF__c</fullName>
    <formula>Employee_CPF_Amount__c  +  Employer_CPF_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CPF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>