force-app/main/default/objects/Payout__c/fields/Total_OW_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_OW_Amount__c</fullName>
    <label>Total OW Amount</label>
    <summarizedField>PayItem__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>PayItem__c.CPF__c</field>
        <operation>equals</operation>
        <value>OW</value>
    </summaryFilterItems>
    <summaryForeignKey>PayItem__c.Payout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>