force-app/main/default/objects/Payout__c/fields/Transport_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Transport_Allowance__c</fullName>
    <label>Transport Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>