force-app/main/default/objects/Payout__c/validationRules/Cannot_modify_Closed_Payout.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_modify_Closed_Payout</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name!=&apos;System Administrator&apos; ,OR(ISPICKVAL(Status__c,&apos;Closed&apos;),ISPICKVAL(PRIORVALUE(Status__c),&apos;Closed&apos;)))</errorConditionFormula>
    <errorMessage>Closed Payout cannot be modified.</errorMessage>
</ValidationRule>