force-app/main/default/objects/Payout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Payable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>