force-app/main/default/objects/Payout__c/listViews/Current_Month_Payouts.listView-meta.xml
<ListView>
    <fullName>Current_Month_Payouts</fullName>
    <columns>NAME</columns>
    <columns>Month__c</columns>
    <columns>Year__c</columns>
    <columns>Employee_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Total_Payable__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Payout_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Current Month Payouts</label>
</ListView>